--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.64.1",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-colors": "^1.4.0",
     "react-native-image-picker": "^4.0.6",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0"
