--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-colors": "^1.4.0",
     "react-native-image-picker": "^4.0.6",
+    "react-native-permissions": "^3.0.5",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0"
   },
